moved the remainder of the working code from the card.html experiment in to main parge index.html

--- a/cards/client/card.html
+++ b/cards/client/card.html
@@ -1,18 +1,16 @@
-<!-- this template will house a codemirror instance where a 
-    function declaration or other significant code chunk will 
-    be loaded -->
+<!-- this was a test page for prototyping the new alicenode 'cards' -->
 
 
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cards Editor</title>
+  <title>Deck of Cards ide</title>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel=stylesheet href="cm/docs.css">
   <link rel=stylesheet href="cm/codemirror.css">
-  <link rel=stylesheet href="cm/merge.css">
-  <link rel=stylesheet href="cm/icecoder.css">
+  <!-- <link rel=stylesheet href="cm/merge.css">
+  <link rel=stylesheet href="cm/icecoder.css"> -->
   <!-- <link rel="stylesheet" href="cm/addons/buttons/buttons.css"> -->
 
   <style>
