showdifferences: true might be causing the diff feature to behave poorly

--- a/client/index.html
+++ b/client/index.html
@@ -118,7 +118,7 @@
                     <div class="onoffswitch">
                         <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="toggleLiveDiffing" onclick="toggleDifferences()" checked>
                         <label class="onoffswitch-label" for="toggleLiveDiffing"></label>
-                    </div>Live Diffing
+                    </div>Diffing
                 </th>
         
                 <th>
@@ -997,7 +997,7 @@ function initUI() {
         revertButtons: true,
         allowEditingOriginals: true,
         // autoRefresh: true,
-        showDifferences: true,
+        // showDifferences: true,
         linewrapping: true,
         connect: "connect",
         // theme: "icecode",
