--- a/client/index_v2.html
+++ b/client/index_v2.html
@@ -1,7 +1,7 @@
 
 <!doctype html>
 
-<title>Alicenode Editor</title>
+<title>Alicenode Editor Client</title>
 <meta charset="utf-8"/>
     <link rel=stylesheet href="cm/docs.css">
 
