added the favicon.ico spoof

--- a/client/index_v2.html
+++ b/client/index_v2.html
@@ -1,7 +1,7 @@
 
 <!doctype html>
 
-<title>Alicenode Editor</title>
+<title>CodeMirror: merge view demo</title>
 <meta charset="utf-8"/>
     <link rel=stylesheet href="cm/docs.css">
 
@@ -28,6 +28,9 @@
 <script src="js/jquery.color.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.graphviz.svg.js"></script>
+
+<!-- temp fix for the 'cannot find 'favicon.ico' error -->
+<link rel="shortcut icon">
 
 
 <style>
