added in the page refresh code snippet, currently commented out

--- a/client/index_v2.html
+++ b/client/index_v2.html
@@ -1,8 +1,13 @@
-
 <!doctype html>
 
 <title>Alicenode Editor Client</title>
-<meta charset="utf-8"/>
+<meta charset="utf-8"/>meta charset="utf-8"/>
+
+<!-- //TEMPORARY: just to aid in development workflow -->
+<!-- <meta http-equiv="refresh" content="5; URL=http://192.168.137.1:8080"> -->
+<!--        SOURCES         -->
+<!-- Codemirror -->
+    <!-- styles -->
     <link rel=stylesheet href="cm/docs.css">
 
 <link rel=stylesheet href="cm/codemirror.css">
