changes made to client, but the cm instance still breaking

--- a/cards/client/index.html
+++ b/cards/client/index.html
@@ -454,6 +454,7 @@ function openSocket() {
                 switch(cmd) {
                     
                     case "deck":
+                    console.log(arg)
                     deck = (JSON.parse(arg))
                     //var newCard = [];
 
