--- a/client/index_v2.html
+++ b/client/index_v2.html
@@ -402,6 +402,9 @@ function openSocket() {
             for (var i = 0; i < fv.length; i+=3) {
                 s += "<li>" + (i/3 + ": { " + fv[i] + ", " + fv[i+1] + ", " + fv[i+2] + " }</li>");
             }
+            
+            // document.getElementById('state').innerHTML = s;     
+            
         } else {
             let message = e.data;
             let q = message.indexOf("?");
