finally fixed the codemirror highlighting on instantiation bug

--- a/client/index_v2.html
+++ b/client/index_v2.html
@@ -290,7 +290,7 @@ function initUI() {
   dv = CodeMirror.MergeView(target, {
     value: value,
     origLeft: panes == 3 ? orig1 : null,
-    orig: orig2,
+    origRight: value,
     lineNumbers: true,
     viewportMargin: 10,
 
