Added semi colon - Alexander

--- a/client/index_v2.html
+++ b/client/index_v2.html
@@ -310,7 +310,7 @@ window.onload = function() {
   orig1 = value;
   orig2 = value;
   initUI();
-  let d = document.createElement("div"); d.style.cssText = "width: 50px; margin: 7px; height: 14px"; dv.editor().addLineWidget(57, d)
+  let d = document.createElement("div"); d.style.cssText = "width: 50px; margin: 7px; height: 14px"; dv.editor().addLineWidget(57, d);
 };
 
 function mergeViewHeight(mergeView) {
