--- a/client/index_v2.html
+++ b/client/index_v2.html
@@ -264,8 +264,10 @@ console.log(ws_url);
 
 //var col;
 // codemirror/mergeview globals:
-var value;
-var orig1;
+var value = "This editor affects the simulation";
+
+var orig1 = "This editor pulls code in from other commits/branches";
+//   orig2 = 
 var dv;
 panes = 2;
 highlight = true;
@@ -289,7 +291,7 @@ function initUI() {
   dv = CodeMirror.MergeView(target, {
     value: value,
     origLeft: panes == 3 ? orig1 : null,
-    origRight: value,
+    origRight: orig1,
     lineNumbers: true,
     viewportMargin: 10,
 
@@ -304,10 +306,10 @@ function initUI() {
 function toggleDifferences() {
   dv.setShowDifferences(highlight = !highlight);
 }
-value = "script";
+//value = "script";
 window.onload = function() {
-  orig1 = value;
-  orig2 = value;
+  value = "This editor affects the simulation";
+  orig1 = "This editor pulls code in from other commits/branches";
   initUI();
   let d = document.createElement("div"); d.style.cssText = "width: 50px; margin: 7px; height: 14px"; dv.editor().addLineWidget(57, d)
 };
