--- a/client/index_v2.html
+++ b/client/index_v2.html
@@ -285,23 +285,31 @@ var authorEmail;
 
 
 function initUI() {
-    isRightDirty = false;
 
     if (value == null) return;
     var target = document.getElementById("view");
     target.innerHTML = "";
     dv = CodeMirror.MergeView(target, {
-    value: value,
-    origLeft: panes == 3 ? orig1 : null,
-    origRight: orig1,
-    lineNumbers: true,
-    viewportMargin: 10,
-
-    mode: "text/html",
-    highlightDifferences: highlight,
-    allowEditingOriginals: true,
-    //connect: connect,
-    collapseIdentical: collapse
+        //content of the left editor
+        value: value, 
+        //content of the right editor
+        origRight: orig1,
+        //make 3 editor windows possible (only 2 will load on start by default)
+        origLeft: panes == 3 ? orig1 : null,
+        //include line numbers in the left margin
+        lineNumbers: true,
+        //keep this at 10 or less. if infinite it slows the page down a LOT. this is essentially the size of the buffer beyond what is displayed, and if set to infinite or larger number, enables text searching, but again, page loading is an issue. 
+        viewportMargin: 10,
+        //keep this. we're primarily concerned with being able to edit cpp code
+        mode: "clike",
+        //show where there two versions differ
+        highlightDifferences: highlight,
+        //we do want to be able to edit code in the right editor, because that's where the whole 'branching-as-playfulness' comes in
+        allowEditingOriginals: true,
+        //not yet sure what difference this makes... check the codemirror manual?
+        //connect: "connect",
+        //option to collapse code in either editor that doesn't differ from its left or right counterpart. this is switchable. 
+        collapseIdentical: collapse
     });
 
     //Detect when user first makes a change to the code in the right editor view
