fixed the collapse changes button

--- a/client/index.html
+++ b/client/index.html
@@ -1002,7 +1002,7 @@ function initUI() {
         linewrapping: true,
         connect: "connect",
         // theme: "icecode",
-        collapseIdentical: true,
+        collapseIdentical: collapse,
         // collapse: collapse
         
 
