--- a/client/index.html
+++ b/client/index.html
@@ -271,7 +271,7 @@ var currentUser = "FullName";
 
 var filename; //the currently selected filename
 //var ws_url = "ws://" + window.location.host + "mergeTestCode.html";
-var ws_url = "ws://localhost:8080";
+var ws_url = "ws://192.168.137.103:8080";
 console.log(ws_url);
 
 //var col;
