added the userworktree to one of the server git commands. need to go through the rest and be sure which need to operate within a worktree

--- a/client/index.html
+++ b/client/index.html
@@ -434,8 +434,11 @@ function sendRightCode(val){
 
 //branch selection:
 function selectBranch() {
-    selection = document.Branch.chooseBranch.value;
-    console.log(selection)
+    //selection = document.Branch.chooseBranch.value;
+    e = document.getElementById('chooseBranch')
+    var selectedBranch = e.options[e.selectedIndex].value;
+    console.log(selectedBranch)
+    ws.send("selectedBranch?" + selectedBranch)
 }
 //file selection
 function chooseFileName(){
