began to get a Reingold-Tilford tree built using the astJSON in browser. see tree.html, which once ready will be added into index.htm

--- a/cards/client/index.html
+++ b/cards/client/index.html
@@ -5,7 +5,7 @@
 
 <head>
 <!-- //TEMPORARY: just to aid in development workflow -->
-<meta http-equiv="refresh" content="5; URL=http://localhost:8080">
+<!-- <meta http-equiv="refresh" content="5; URL=http://localhost:8080"> -->
 <!--        SOURCES         -->
 <!-- Codemirror -->
     <!-- styles -->
@@ -465,7 +465,7 @@ function openSocket() {
                     function visit(node, parentnode, ctx) {
                         //console.log("enter", node.ast, "of", parentnode ? parentnode.ast : node.filename);
 
-                        //ctx.card.push(node.ast);
+                        ctx.card.push(node.ast);
                         // if (node.comment.text){
                         //   //  ctx.card.push(node.comment.text)
                        
