the state.html is ready to receive the state.h's ast, and also its code

--- a/cards/client/index.html
+++ b/cards/client/index.html
@@ -318,7 +318,7 @@ function sourceCard(code) {
         cursorScrollMargin: 0,
         
     });
-    dv.setSize(427, 500);
+    dv.setSize("100%", 500);
 
 }
 
