change title of the state editor

--- a/cards/client/state.html
+++ b/cards/client/state.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-<title>Deck of Cards ide</title>
+<title>Alicenode State Editor</title>
 
 <head>
 <!-- //TEMPORARY: just to aid in development workflow -->
