seem to have fixed the client/index for cards, but the server is still broken

--- a/cards/client/index.html
+++ b/cards/client/index.html
@@ -406,7 +406,7 @@ function openSocket() {
                     //deck = (JSON.parse(arg))
                     //var newCard = [];
                     //console.log(arg)
-                    deck = JSON.parse(arg);
+                    deck = arg
 
                     console.log("test" + deck)
 
