the codemirror refresh function isn't yet working, also not a priority for the cards editor yet

--- a/cards/client/index.html
+++ b/cards/client/index.html
@@ -137,9 +137,10 @@
     draggingClass:"dragging",
     onResize:refreshSourceCM});
 
+//not yet working:
     function refreshSourceCM(){
-        console.log('yep')
-        cmRefresh()    
+        console.log('codemirror refresh not yet working for resize')
+        //cmRefresh()    
         }
 
 
@@ -328,9 +329,10 @@ function sourceCard(code) {
         
     });
     dv.setSize(427, 500);
-    function cmRefresh(){
-        dv.refresh();
-    }
+    //not yet working
+    // function cmRefresh(){
+    //     dv.refresh();
+    // }
 
 }
 
