begin formatting and cleaning up the index.html

--- a/client/index.html
+++ b/client/index.html
@@ -20,8 +20,6 @@
 <script src="cm/xml.js"></script>
 <script src="cm/css.js"></script>
 <script src="cm/modes/javascript.js"></script>
-<!-- <script src="cm/htmlmixed.js"></script> -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"></script> -->
 <script src="cm/diff_match_patch.js"></script>
 <script src="cm/merge.js"></script>
 
@@ -30,18 +28,13 @@
 
 <!-- scripts -->
 <script type="text/javascript" src="js/pako.js"></script>
-<!-- <script type="text/javascript" src="js/pako_inflate.js"></script> -->
-<!-- <script type="text/javascript" src="js/pako_deflate.js"></script> -->
 <script src="js/jquery-3.3.1.js"></script>
 <script src="js/jquery-ui.js"></script>
 <script src="js/jquery.mousewheel.min.js"></script>
 <script src="js/jquery.color.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.graphviz.svg.js"></script>
-
-<!-- temp fix for the 'cannot find 'favicon.ico' error -->
-<link rel="shortcut icon">
-
+<link rel="shortcut icon"><!-- fix the 'cannot find 'favicon.ico' error -->
 
 <style>
     .CodeMirror { line-height: 1.2; }
